# gbc-plus

./: .gitignore  Cargo.toml  README.md
desktop/: Cargo.toml
desktop/src/: cloud_service.rs  frontend.rs  main.rs
mobile/: .gitignore  Cargo.toml  build-rust.sh  build.rs  compile.sh  gbc-emu.sh
mobile/src/: lib.rs
src/: main.rs
src/cpu/: bus.rs  cpu_instructions.rs  disassembler.rs  mod.rs  timer.rs
src/cpu/bus/: cartridge.rs  interrupt_register.rs  joypad.rs  timer.rs
src/cpu/bus/apu/: audio_master_register.rs  master_volume_vin_register.rs  mod.rs  sound_panning_register.rs
src/cpu/bus/apu/channels/: channel1.rs  channel2.rs  channel3.rs  channel4.rs  channel4_control_register.rs  mod.rs  (+6 more)
src/cpu/bus/cartridge/: backup_file.rs  mbc.rs  mbc1.rs
src/cpu/bus/gpu/: lcd_status_register.rs  mod.rs
src/cpu/bus/ppu/: bg_palette_index_register.rs  bg_palette_register.rs  bg_palette_spec_register.rs  lcd_control_register.rs  lcd_status_register.rs  mod.rs  oam_entry.rs  obj_palette_index_register.rs  obj_palette_register.rs  picture.rs
web/: Cargo.toml
web/app/: audio_processing_node.js  index.html  index.ts  package-lock.json  package.json
web/app/src/: gbc.ts
web/app/src/input/: joypad.ts
web/app/src/output/: audio_interface.ts  video_interface.ts
web/app/src/saves/: cloud_service.ts  gbc_database.ts  state_manager.ts
web/app/src/util/: reactive.ts  waveform_analyzer.ts  waveform_visualizer.ts
web/app/styles/: app.scss
web/pkg/: gb_plus_web.d.ts  gb_plus_web.js  gb_plus_web_bg.wasm  gb_plus_web_bg.wasm.d.ts  package.json
web/src/: lib.rs
(+4 files in other folders)
